--- a/css/index.css
+++ b/css/index.css
@@ -123,6 +123,48 @@ body {
     width: 100%;
   }
 
+/*
+
+-----HOMEPAGE-----
+
+*/
+
+.logo{
+  position: absolute;
+  z-index: 1;
+  height: 20%;
+  margin-left: 100vh;
+  margin-top: 40vh;
+  transition: transform .2s; 
+}
+
+.logo:hover{
+  transform: scale(1.5);
+}
+
+.text{
+  position: absolute;
+  z-index: 1;
+  margin-left: 110vh;
+  margin-top: 60vh;
+  transition: transform .2s;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.text:hover{
+  transform: scale(1.5);
+  opacity: 1;
+}
+
+  .homepage{
+    height: 100vh;
+  position: relative;
+
+  }
+
+  
+
+
   
 
   
