--- a/css/index.css
+++ b/css/index.css
@@ -136,10 +136,46 @@ body {
   margin-left: 100vh;
   margin-top: 40vh;
   transition: transform .2s; 
+
+  
+  padding: 20px;
+  color: #fff;  
+text-align: center;
+  line-height: 30px;
+  border-radius: 50%;
+  font-size: 20px;
+ 
+  transition: .5s;
 }
 
 .logo:hover{
   transform: scale(1.5);
+  background: rgba(179, 214, 151, 0.178);
+}
+
+.logo::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: 0 0 5px rgba(179, 214, 151, 0.178);
+  transition: .5s;
+  transform: scale(.9);
+  z-index: -1;
+}
+
+.logo:hover::before {
+  transform: scale(1.1);
+  box-shadow: 0 0 5px 0 rgba(179, 214, 151, 0.178);
+}
+
+.logo:hover {
+  color: 0 0 5px 0 rgba(179, 214, 151, 0.178);
+  box-shadow: 0 0 5px 0 rgba(179, 214, 151, 0.178);
+  text-shadow: 0 0 5px 0 rgba(179, 214, 151, 0.178);
 }
 
 .text{
