--- a/css/index.css
+++ b/css/index.css
@@ -161,7 +161,7 @@ text-align: center;
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background: 0 0 5px rgba(179, 214, 151, 0.178);
+  background:  rgba(179, 214, 151, 0.178);
   transition: .5s;
   transform: scale(.9);
   z-index: -1;
@@ -169,18 +169,19 @@ text-align: center;
 
 .logo:hover::before {
   transform: scale(1.1);
-  box-shadow: 0 0 5px 0 rgba(179, 214, 151, 0.178);
+  box-shadow: 10px 10px 5px rgba(214, 214, 214, 0.178);
 }
 
 .logo:hover {
-  color: 0 0 5px 0 rgba(179, 214, 151, 0.178);
-  box-shadow: 0 0 5px 0 rgba(179, 214, 151, 0.178);
-  text-shadow: 0 0 5px 0 rgba(179, 214, 151, 0.178);
+  color: rgba(179, 214, 151, 0.178);
+  box-shadow: 10px 10px 5px rgba(179, 214, 151, 0.178);
+  opacity: 0.5;
 }
 
 .text{
   position: absolute;
   z-index: 1;
+  opacity: O;
   margin-left: 110vh;
   margin-top: 60vh;
   transition: transform .2s;
