--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0px;
   padding: 0px;
 }
@@ -8,50 +8,47 @@ body {
   background-color: rgb(241, 238, 234);
 }
 
-.title{ 
-   margin-right: 30px;
-   margin-left: 40px;
-   margin-top: 15px;
-   width: 60px;
-   height: 60px;
+.title {
+  margin-right: 30px;
+  margin-left: 40px;
+  margin-top: 15px;
+  width: 60px;
+  height: 60px;
 }
 
 .navbar {
-    background-color:rgb(241, 238, 234); 
-    display: flex;
-    align-items: center;
-  }
+  background-color: rgb(241, 238, 234);
+  display: flex;
+  align-items: center;
+}
 
-  ul{
-      margin-left: 40%;
-      
-  }
-  li a{
-    margin: 0 30px;
-    font-family: 'Abril Fatface';
-    color: rgb(73, 14, 14);
-    
-  }
-  .navbar-top{
-    display: flex;
-    align-items: center;
-  }
-  
+ul {
+  margin-left: 40%;
+}
+li a {
+  margin: 0 30px;
+  font-family: "Abril Fatface";
+  color: rgb(73, 14, 14);
+}
+.navbar-top {
+  display: flex;
+  align-items: center;
+}
 
-  .navbar ul li {
-      display: inline;
-  }
+.navbar ul li {
+  display: inline;
+}
 
-  .navbar-2{
-    width: 100%;
-    display: inline;
-  }
+.navbar-2 {
+  width: 100%;
+  display: inline;
+}
 
-  section{
-    height: 90vh;
-  }
+section {
+  height: 90vh;
+}
 
-  .sidenav{
+.sidenav {
   background-color: rgb(241, 238, 234);
   height: 85vh; /* Full-height: remove this if you want "auto" height */
   width: 160px; /* Set the width of the sidebar */
@@ -65,63 +62,58 @@ body {
   flex-direction: column;
   justify-content: space-around;
   margin-bottom: 130px;
-  }
+}
 
-  .sidenav a { 
-  font-family: 'Playfair Display', serif;
-   padding: 6px 28px 36px 16px;
+.sidenav a {
+  font-family: "Playfair Display", serif;
+  padding: 6px 28px 36px 16px;
   text-decoration: none;
   top: -10;
   font-size: 25px;
   color: #818181;
   display: block;
-  
-  }
+}
 
-  h1{
-    text-align: center;
-  }
-  h2{
-    text-align: center;
-  }
+h1 {
+  text-align: center;
+}
+h2 {
+  text-align: center;
+}
 
+.horizontal-slider {
+  display: block;
+  width: 100%;
+  overflow-x: scroll;
+  margin-top: 12px;
+  position: relative;
+  margin-left: 160px;
+}
+.slider-container {
+  display: block;
+  white-space: nowrap;
+}
 
-  .horizontal-slider {
-    display: block;
-    width: 100%;
-    overflow-x: scroll;
-    margin-top: 12px;
-    position: relative;
-    margin-left: 160px;
-  
-  }
-  .slider-container{
-    display: block;
-    white-space: nowrap;
-  }
+.item {
+  display: inline-block;
+  margin-right: 10px;
+}
 
+.item img {
+  width: 100%;
+}
 
-  .item{
-    display: inline-block;
-    margin-right: 10px;
-  }
+img {
+  height: 600px;
+}
 
-  .item img{
-    width: 100%;
-  }
-
-  img{
-    height: 600px;
-    
-  }
-
-  footer{
-    height: 20px;
-    position: relative;
-    font-size: 17px;
-    text-align: center;
-    width: 100%;
-  }
+footer {
+  height: 20px;
+  position: relative;
+  font-size: 17px;
+  text-align: center;
+  width: 100%;
+}
 
 /*
 
@@ -129,80 +121,76 @@ body {
 
 */
 
-.logo{
+
+.containerlogo{
   position: absolute;
   z-index: 1;
   height: 20%;
   margin-left: 100vh;
   margin-top: 40vh;
-  transition: transform .2s; 
+  color: #fff;
+  text-align: center;
 
-  
+}
+.logo {
   padding: 20px;
-  color: #fff;  
-text-align: center;
+  transition: transform 0.2s;
   line-height: 30px;
   border-radius: 50%;
-  font-size: 20px;
- 
-  transition: .5s;
+  transition: 0.5s;
 }
 
-.logo:hover{
+.logo:hover {
   transform: scale(1.5);
-  background: rgba(179, 214, 151, 0.178);
+  background: rgba(179, 179, 151, 0.178);
 }
 
-.logo::before {
-  content: '';
+.containerlogo::before {
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background:  rgba(179, 214, 151, 0.178);
-  transition: .5s;
-  transform: scale(.9);
+  transform: scale(0.9);
   z-index: -1;
 }
 
 .logo:hover::before {
   transform: scale(1.1);
-  box-shadow: 10px 10px 5px rgba(214, 214, 214, 0.178);
+  box-shadow: 10px 10px 10px rgba(179, 214, 151, 0.178);
 }
 
 .logo:hover {
   color: rgba(179, 214, 151, 0.178);
-  box-shadow: 10px 10px 5px rgba(179, 214, 151, 0.178);
-  opacity: 0.5;
+  box-shadow: 10px 10px 10px rgba(179, 214, 151, 0.178);
 }
 
-.text{
-  position: absolute;
-  z-index: 1;
-  opacity: O;
-  margin-left: 110vh;
-  margin-top: 60vh;
-  transition: transform .2s;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.text {
+  opacity: 0;
+  transition: transform 0.3s;
+  font-family: "Amatic SC", cursive;
+  font-size: 30px;
+  color: #545b64bd
 }
 
-.text:hover{
-  transform: scale(1.5);
+.containerlogo:hover .text {
+  transform: scale(1.1);
   opacity: 1;
+  font-family: "Amatic SC", cursive;
+  font-size: 160px;
+  font-weight: bold;
+  color: #062c1291;
+  margin-top: 10px;
 }
 
-  .homepage{
-    height: 100vh;
+.homepage {
+  height: 100vh;
   position: relative;
+}
 
-  }
-
-  
-
-
-  
-
-  
-  
+/*
+Changer le CSS de l'élément enfant lorsque le parent est en vol stationnaire 
+.parent:hover .children
+*/
