--- a/css/contact.css
+++ b/css/contact.css
@@ -129,12 +129,13 @@ input[type="submit"]:hover {
 }
 
 .container {
-  margin-top: -750px;
+  margin-top: -550px;
   border-radius: 5px;
   background-color: rgb(241, 238, 234);
   padding: 20px;
   width: 30%;
-  margin-left: 63%;
+  margin-left: 30%;
+  margin-bottom: 10%;
   position: absolute;
   left: 0;
   bottom: 0;
