--- a/css/gallery.css
+++ b/css/gallery.css
@@ -56,6 +56,13 @@ ul {
   padding: 10px;
   font-size: 25px;
   font-family: "Amatic SC", cursive;
+  
+}
+
+.menu li a{
+  text-decoration: none;
+  color: #e8ebec;
+
 }
 
 .all {
