--- a/css/gallery1.css
+++ b/css/gallery1.css
@@ -41,14 +41,14 @@ display: block;
 }
 
 .bigmenu{
-  
+  color: aliceblue;
   margin: 20px;
   display: flex;
 
 }
 .textmenu{
   font-family: 'Abril Fatface', cursive;
-      padding: 6px 8px 6px 16px;
+  padding: 6px 8px 6px 16px;
   text-decoration: none;
   font-size: 25px;
   color: #818181;
@@ -80,6 +80,12 @@ ul{
     list-style: none;
     padding: 10px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    
+  }
+
+  .menu li a{
+    color: azure; 
+    text-decoration:none; 
   }
 
 body {
